--- a/xmap_project/pubspec.yaml
+++ b/xmap_project/pubspec.yaml
@@ -11,9 +11,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   cupertino_icons: ^1.0.8
   dio: ^5.7.0
+  yandex_mapkit: ^3.3.3
+  equatable: ^2.0.5
+  permission_handler: ^11.0.0
 
 dev_dependencies:
   flutter_test:
